<attachment> on iOS should paint its progress indicator instead of a green square https://bugs.webkit.org/show_bug.cgi?id=155482 <rdar://problem/24805991>

Reviewed by Simon Fraser.

No new tests; there are existing tests that will be enabled shortly.

* rendering/RenderThemeIOS.mm:
(WebCore::getAttachmentProgress):
Clamp progress to 0-1.

(WebCore::paintAttachmentProgress):
Paint a pie.


Canonical link: https://commits.webkit.org/173600@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198191 268f45cc-cd09-0410-ab3c-d52691b4dbfc